@@ -44,6 +44,7 @@
 - [#577] 10 new colors added for the lines
 - [#570] Tiled PDF : Margin values correctly taken into account
 - [#580] Extend the list of heights.
+- [#582] Issue with standard path to shared data on Linux.
 
 # Version 0.4.5 October 15, 2016
 - [#435] Valentina doesn't change the cursor.
